--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					Quagga.decodeSingle({
 						//解码方式，与条形码的编码方式有关
 					    decoder: {
-					        readers: ["code_128_reader"] // List of active readers
+					        readers: ["code_128_reader", "ean_reader", "ean_8_reader", "code_39_reader", "code_39_vin_reader", "codabar_reader", "upc_reader", "upc_e_reader", "i2of5_reader", "2of5_reader", "code_93_reader"] // List of active readers
 					    },
 					    locate: true, // try to locate the barcode in the image
 					    src: 'data:image/jpg;base64,' + imgData // or 'data:image/jpg;base64,' + data
